# KioskQML

./: CMakeLists.txt  KioskQML.qmlproject  KioskQML.qmlproject.qtds  README.md  qmlmodules
content/: App.qml  AppForm.ui.qml  CMakeLists.txt  Terminal.qml  TerminalForm.ui.qml
imports/: CMakeLists.txt
imports/KioskQML/: CMakeLists.txt  qmldir
imports/KioskQML/designer/: plugin.metainfo
src/: import_qml_plugins.h  main.cpp  qmlshell.cpp  qmlshell.h
